--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
-sudo: required
-dist: xenial
 language: python
 
 matrix:
@@ -11,6 +9,8 @@ matrix:
         - python: 3.6
           env: TOXENV=py36
         - python: 3.7
+          dist: xenial
+          sudo: true
           env: TOXENV=py37
         - python: pypy2.7-5.8.0
           env: TOXENV=pypy
