--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,11 @@
 [tox]
+skip_missing_interpreters = true
 envlist =
-    py27,
-    py35,
-    py36,
-    py37,
-    pypy,
-    pypy3,
+    py{27,35,36,37,py,py3}
 
 [testenv]
-passenv = *
+usedevelop = true
 deps =
     pytest
 commands =
-    python setup.py --quiet clean develop
     pytest -v
