--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 [tox]
 skip_missing_interpreters = true
 envlist =
-    py{27,35,36,37,py,py3}
+    py{27,37}
 
 [testenv]
 usedevelop = true
 deps =
-    pytest
+    -rrequirements-dev.txt
 commands =
-    pytest -v
+    pytest -v {posargs}
