--- a/tests/docker/docker-compose.yaml
+++ b/tests/docker/docker-compose.yaml
@@ -3,10 +3,13 @@ version: '3'
 services:
 
   userpath:
+    container_name: ${SHELL}-${DOCKERFILE}
     build:
-      context: ./../../
+      context: .
       dockerfile: ./${DOCKERFILE}
       args:
         PYTHON_VERSION: ${PYTHON_VERSION}
+    environment:
+      - SHELL=${SHELL}
     volumes:
       - ./../../:/home/userpath
