--- a/tox.ini
+++ b/tox.ini
@@ -9,3 +9,7 @@ deps =
     -rrequirements-dev.txt
 commands =
     pytest -v {posargs}
+
+[testenv:py27]
+commands =
+    pytest -v -m "not xonsh" {posargs}
