--- a/.coveragerc
+++ b/.coveragerc
@@ -1,10 +1,23 @@
 [run]
+data_file = tests/coverage/.coverage
+branch = True
+parallel = True
 source =
     userpath
     tests
-branch = True
 omit =
     userpath/__main__.py
+    userpath/cli.py
+
+[paths]
+userpath =
+   userpath
+   /home/userpath/userpath
+   c:\*\userpath\userpath
+tests =
+   tests
+   /home/userpath/tests
+   c:\*\userpath\tests
 
 [report]
 exclude_lines =
