--- a/tox.ini
+++ b/tox.ini
@@ -2,14 +2,22 @@
 skip_missing_interpreters = true
 envlist =
     py{27,37}
+    coverage
 
 [testenv]
 usedevelop = true
 deps =
     -rrequirements-dev.txt
 commands =
-    pytest -v {posargs}
+    coverage run -m pytest -v {posargs}
 
 [testenv:py27]
 commands =
-    pytest -v -m "not xonsh" {posargs}
+    coverage run -m pytest -v -m "not xonsh" {posargs}
+
+[testenv:coverage]
+skip_install = true
+deps = coverage
+commands =
+    coverage combine
+    coverage report
