--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,3 +1,9 @@
+image: Visual Studio 2017
+build: off
+test: off
+cache:
+  - '%LOCALAPPDATA%\pip\Cache'
+
 skip_branch_with_pr: true
 branches:
   only:
@@ -6,14 +12,11 @@ branches:
 environment:
   matrix:
     - PYTHON: "C:\\Python27-x64"
-    - PYTHON: "C:\\Python35-x64"
-    - PYTHON: "C:\\Python36-x64"
+    - PYTHON: "C:\\Python37-x64"
 
 install:
-  - "%PYTHON%\\python.exe -m pip install pytest"
-  - "%PYTHON%\\python.exe setup.py --quiet clean develop"
-
-build: off
+  - "%PYTHON%\\python.exe -m pip install tox codecov"
 
 test_script:
-  - "%PYTHON%\\python.exe -m pytest"
+  - "%PYTHON%\\python.exe -m tox"
+  - "%PYTHON%\\python.exe -m codecov"
