--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ envlist =
 
 [testenv]
 usedevelop = true
+passenv = APPVEYOR
 deps =
     -rrequirements-dev.txt
 commands =
@@ -21,3 +22,10 @@ deps = coverage
 commands =
     coverage combine
     coverage report
+
+[testenv:codecov]
+skip_install = true
+deps = coverage codecov
+commands =
+    coverage xml
+    codecov -X gcov -f coverage.xml
