--- a/tox.ini
+++ b/tox.ini
@@ -25,7 +25,9 @@ commands =
 
 [testenv:codecov]
 skip_install = true
-deps = coverage codecov
+deps =
+    coverage
+    codecov
 commands =
     coverage xml
     codecov -X gcov -f coverage.xml
