--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -15,6 +15,7 @@ environment:
     - PYTHON: "C:\\Python37-x64"
 
 install:
+  - "%PYTHON%\\python.exe -m pip install -U pip"
   - "%PYTHON%\\python.exe -m pip install tox codecov"
 
 test_script:
