--- a/tox.ini
+++ b/tox.ini
@@ -25,6 +25,14 @@ commands =
 
 [testenv:codecov]
 skip_install = true
+passenv =
+    APPVEYOR
+    APPVEYOR_*
+    CI
+    CODECOV_*
+    TOXENV
+    TRAVIS
+    TRAVIS_*
 deps =
     coverage
     codecov
