Add shell detection (#6)
* Add shell detection

* fix

* oop

* see

* ok

* refactor & add integration tests

* o

* closer

* fish why

* yay

* try

* coverage

* fix coverage

* CI old

* fix codecov

* Update .codecov.yml

* better cli errors

* Update README.rst

* re-order

* badges

* Update README.rst

* address review

* never

--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,41 @@
 [tox]
+skip_missing_interpreters = true
 envlist =
-    py27,
-    py35,
-    py36,
-    py37,
-    pypy,
-    pypy3,
+    py{27,37}
+    coverage
 
 [testenv]
-passenv = *
+usedevelop = true
+passenv = APPVEYOR
 deps =
-    pytest
+    -rrequirements-dev.txt
 commands =
-    python setup.py --quiet clean develop
-    pytest
+    coverage run -m pytest -v {posargs}
+
+[testenv:py27]
+commands =
+    coverage run -m pytest -v -m "not xonsh" {posargs}
+
+[testenv:coverage]
+skip_install = true
+deps = coverage
+commands =
+    coverage combine
+    coverage report
+
+[testenv:codecov]
+skip_install = true
+passenv =
+    APPVEYOR
+    APPVEYOR_*
+    CI
+    CODECOV_*
+    TOXENV
+    TRAVIS
+    TRAVIS_*
+deps =
+    coverage
+    codecov
+commands =
+    coverage xml
+    codecov -X gcov -f coverage.xml
