--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,14 +1,23 @@
+image: Visual Studio 2017
+build: off
+test: off
+cache:
+  - '%LOCALAPPDATA%\pip\Cache'
+
+skip_branch_with_pr: true
+branches:
+  only:
+    - master
+
 environment:
   matrix:
     - PYTHON: "C:\\Python27-x64"
-    - PYTHON: "C:\\Python35-x64"
-    - PYTHON: "C:\\Python36-x64"
+    - PYTHON: "C:\\Python37-x64"
 
 install:
-  - "%PYTHON%\\python.exe -m pip install pytest"
-  - "%PYTHON%\\python.exe setup.py --quiet clean develop"
-
-build: off
+  - "%PYTHON%\\python.exe -m pip install -U pip"
+  - "%PYTHON%\\python.exe -m pip install tox codecov"
 
 test_script:
-  - "%PYTHON%\\python.exe -m pytest"
+  - "%PYTHON%\\python.exe -m tox"
+  - "%PYTHON%\\python.exe -m tox -e codecov"
