MANIFEST.in: Add tests to sdist
Fixes https://github.com/ofek/userpath/issues/11

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,9 @@
 include LICENSE-APACHE
 include LICENSE-MIT
 include README.rst
+include HISTORY.rst
+include requirements*.txt
+include tox.ini
+recursive-include tests *.py
+recursive-include tests *.txt
+recursive-include tests *.yaml
