--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
         python-version: ['3.7']
 
     env:
-      PYTHON_VERSION: '3.7'
+      PYTHON_VERSION: '${{ matrix.python-version }}'
 
     steps:
     - uses: actions/checkout@v2
