--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ build-backend = "hatchling.build"
 [project]
 name = "userpath"
 description = 'Cross-platform tool for adding locations to the user PATH'
-readme = "README.rst"
-license = "MIT OR Apache-2.0"
+readme = "README.md"
+license = "MIT"
 requires-python = ">=3.7"
 keywords = [
   "path",
@@ -18,7 +18,6 @@ authors = [
 classifiers = [
   "Development Status :: 4 - Beta",
   "Intended Audience :: Developers",
-  "License :: OSI Approved :: Apache Software License",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
   "Programming Language :: Python :: 3.7",
